docs(swagger): atualiza documentacao da API no swagger
